# MineScope

./: .gitignore  PROJECT_CONTEXT.md  README.md  SETUP.md  gold_layer.json  index.html  main.nf  main.py  nextflow.config  nextflow_schema.json  pyproject.toml
${params.outdir}/assembly/megahit_out/: final.contigs.fa
assets/: index-C9jI9-CX.css  index-D-4nFZsZ.js  index-DJeyWi0l.js  index-DJvsxir1.js
dashboard/: index.html  package-lock.json  package.json  vite.config.js
dashboard/src/: App.css  App.jsx  index.css
dashboard/src/components/: CellDetail.jsx  ChemScatter.jsx  ColorLegend.jsx  ElevationPHScatter.jsx  Header.jsx  HeatmapGrid.jsx  LayerControls.jsx  PHRichnessScatter.jsx  PathwayBar.jsx  RadarChart.jsx  RichnessBar.jsx  Sidebar.jsx  TerrainViewer.jsx
dashboard/src/pages/: AnalyticsPage.jsx  DataPage.jsx  PipelinePage.jsx  TerrainPage.jsx
dashboard/src/utils/: buildTerrainMesh.js  colorScales.js
data/bronze/chemistry/: soil_chemistry.csv
data/bronze/lidar/: lidar_grid.csv
docs/architecture/: amplicon_adapter_spec.md  constrained_annotation_pipeline.md  seqera_tracking_spec.md
examples/amplicon/: otu_table.tsv  sample_metadata.tsv
modules/: assemble_reads.nf  pathway_profiling.nf
scripts/: run_pipeline.py
scripts/data_generation/: generate_chemistry.py  generate_lidar.py
src/adapters/amplicon/: otu_reader.py
src/adapters/chemistry/: reader.py
src/adapters/lidar/: reader.py
src/adapters/metagenomics/: reader.py
src/domain/models/: amplicon.py  chemistry.py  lidar.py  pathway.py
src/layers/gold/: spatial_merge.py
(+3 files in other folders)
