[project]
name = "minescope"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "polars>=1.40.1",
    "pydantic>=2.13.4",
    "scipy>=1.17.1",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.13",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
